--- a/index.html
+++ b/index.html
@@ -415,10 +415,11 @@
                     <p>
                         In addition to the regional recommendation, we also want to provide a more personalized recommendation based on the users' preferred beer quality. We extracted the 
                         top 10 descriptive words from previous reviews for each beer and style, and this kind of recommendation is based on containment relationships of this adjective set
-                        to the qualititive query. For instance, if you enjoy 
-                        .
+                        to the qualititive query. Some examples from our recommendation are displayed below. We also visualize the descriptive word cloud for each recommendation,
+                        in order to facilitate the user to get a more comprehensive sense about the recommended beers' quality before making the final decision. Similarly, if you've been pleased
+                        by a certain beer style, you can also find similar beers with our recommendation tool based on our previous beer similarity analysis.
+                    </p>
 
-                    <p>text</p>
                     <div class="recommendation-container">
                         <div id="recommendation_keyword" class="plotly-chart"></div>
                         <div id="recommendation_similarity" class="plotly-chart"></div>
