--- a/index.html
+++ b/index.html
@@ -366,23 +366,20 @@
 					We found that, overall, the sentiment of positive beer names had a significant positive impact on their ratings. Each increase in emotional level can increase the beer rating by 0.01.
 					<br>
 					<br>
-					In subsamples from different users' locations, this positive impact of language emotion is significant for users in the United States and Canada, but not significant in Europe.
+					In subsamples from different users' locations, this positive impact of language sentiment is significant for users in the United States and Canada, but not significant in Europe.
 					</p>
 					<div id="beername2" class="plotly-chart" align="center"></div>
 					<p>
-					Then, we replaced the explained variable (rating) with beer characteristics: abv, appearance, aroma, palate, and taste. We found that positive beer verbal emotions have a significant positive impact on appearance, aroma, palate, and taste, especially taste. (There is no doubt that abv is objectively unaffected.)
+					Then, we replaced the explained variable (rating) with beer characteristics: abv, appearance, aroma, palate, and taste. We found that positive beer sentiments have a significant positive impact on appearance, aroma, palate, and taste, especially taste. (There is no doubt that abv is objectively unaffected.)
 					A significant increase in flavor resulted in an increase in ratings. This result is consistent with our analysis in the previous section.
 					</p>
 					<div id="beername4" class="plotly-chart" align="center"></div>
 					<h4> The impact of the sentiment conveyed by beer names in various languages on ratings </h4>					
 					<p>
-					Furthermore, if we focus on both language and language emotion, what will we find?
+					Furthermore, if we focus on both language and language sentiment, what will we find?
 					<br>
 					<br>
-					We found that, overall, the verbal sentiment of positive beer names had a significant positive impact on their ratings. Each increase in emotional level can increase the beer rating by 0.02.
-					<br>
-					<br>
-					The intersection of linguistic emotion and language shows that this positive effect of linguistic emotion is enhanced in beers named in French and Spanish. In German and Italian, negative effects are shown.
+					The intersection of sentiment and language shows that this positive effect of sentiment is enhanced in beers named in French and Spanish. In German and Italian, negative effects are shown.
 					</p>
 					<div id="beername3" class="plotly-chart" align="center"></div>
                 </div>
