--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <div class="box" id="topic3">Beer Popularity and Taste Preference</div>
             <div class="box" id="topic4">Beer Name, Beer Flavor</div>
             <div class="box" id="topic5">Let's Recommend!</div>
+			<div class="box" id="topic6">Conclusion</div>
         </div>
 
         <!-- Edit Here -->
@@ -431,6 +432,15 @@
                 </div>
             </div>
 
+			<div class="content-section" id="section6">
+                <div class="blurb" id="blurb6">
+                    <h3 class="slide-header">Conclusion</h3>
+                    <p>
+					text
+					</p>
+                </div>
+			</div>
+			
             <div class="spacing"></div>
             <div class="spacing"></div>
             <div class="spacing"></div>
