--- a/index.html
+++ b/index.html
@@ -442,14 +442,16 @@
 					</p>
                 </div>
 			</div>
+			<h3 style="font-size:1.5em; color:#556B2F">Wish you a merry Christmas and a hoppy drink!</h3>		
+            <img src="img/end.png" alt="meme" width="500" id="meme-image">
 			
-            <div class="spacing"></div>
+			<div class="spacing"></div>
             <div class="spacing"></div>
             <div class="spacing"></div>
             <div class="spacing"></div>
 
             <div class="analysis">
-                <h2>Sources</h2>
+                <h2>Sources & Reference</h2>
                 <p> RateBeer;
                     Beer Adovocate;
                     Craft Beer; 
