--- a/index.html
+++ b/index.html
@@ -439,11 +439,15 @@
                     <h3 class="slide-header">Conclusion</h3>
                     <p>
 					text
+					<br>
+					<br>
+					Continuing, our attention turns to the names of the beers. We observe a notable increase of approximately 0.05 points in ratings for beers with names in German and Dutch. Furthermore, the positive emotional sentiment conveyed by beer names significantly enhances ratings, especially among users from the United States and Canada. This positive impact of emotional sentiment extends to taste, aroma, and palate, with taste exhibiting the most pronounced effect, consistent with our earlier analysis. Additionally, beers with names in French and Spanish demonstrate a significant positive influence from the emotional sentiment.
+					<br>
+					<br>
+					text
 					</p>
                 </div>
-			</div>
-			<h3 style="font-size:1.5em; color:#556B2F">Wish you a merry Christmas and a hoppy drink!</h3>		
-            <img src="img/end.png" alt="meme" width="500" id="meme-image">
+			</div>		
 			
 			<div class="spacing"></div>
             <div class="spacing"></div>
@@ -461,6 +465,13 @@
 					Barlow, M. A., Verhaal, J. C., & Hoskins, J. D. (2018). Guilty by association: Product-level category stigma and audience expectations in the US craft beer industry. <i>Journal of Management, 44(7)</i>, 2934-2960.
                 </p>
             </div>
+			
+			<div class="spacing"></div>
+			<div class="spacing"></div>
+			
+			<h3 style="font-size:1.5em; color:#556B2F">Wish you a merry Christmas and a hoppy drink!</h3>		
+            <img src="img/end.png" alt="meme" width="500" id="meme-image">
+			
         </div>
     </div>
 
