--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                     <br>
 					Interestingly, the two languages are considered highly similar. We speculate that this may be related to German beer culture and reputation.
 					We found similar views in the literature.
-					Barlow et al. (2018) found that knowledgeable consumers rated American lagers lower than other beers, including German and Czech style lagers, even though the taste and flavor attributes of these styles are very similar to those of American lagers. 
+					Barlow <i>et al.</i> (2018) found that knowledgeable consumers rated American lagers lower than other beers, including German and Czech style lagers, even though the taste and flavor attributes of these styles are very similar to those of American lagers. 
 					</p>
 					<div id="beername1" class="plotly-chart" align="center"></div>
 					<h4> The impact of sentiment conveyed by beer on ratings </h4>
