--- a/index.html
+++ b/index.html
@@ -438,10 +438,12 @@
                 <div class="blurb" id="blurb6">
                     <h3 class="slide-header">Conclusion</h3>
                     <p>
-					text
+					The dataset, merging BeerAdvocate and RateBeer, includes 6,084 breweries, 45,640 beers, and 1.2 million ratings. Ratings align between platforms, and correlations highlight taste and aroma agreement. American IPA prevails in diverse beer styles, reflecting global brewing diversity with heightened US user engagement.					<br>
+					<br>
+					Analyzing beer style similarities using textual descriptors and numerical ranges, we found that English Brown Ale and American Brown Ale exhibit high similarity, while Smoked Beer stands out as notably different. Specific characteristics contribute to each style's uniqueness.
 					<br>
 					<br>
-					Continuing, our attention turns to the names of the beers. We observe a notable increase of approximately 0.05 points in ratings for beers with names in German and Dutch. Furthermore, the positive emotional sentiment conveyed by beer names significantly enhances ratings, especially among users from the United States and Canada. This positive impact of emotional sentiment extends to taste, aroma, and palate, with taste exhibiting the most pronounced effect, consistent with our earlier analysis. Additionally, beers with names in French and Spanish demonstrate a significant positive influence from the emotional sentiment.
+					Continuing, our attention turns to the names of the beers.  A noteworthy rise of around 0.05 points is evident for German and Dutch names. Positive emotional sentiments in names notably boost ratings, particularly for US and Canadian users, impacting taste, aroma, and palate. French and Spanish names also show a significant positive impact from emotional sentiment.
 					<br>
 					<br>
 					text
