--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 					Continuing, our attention turns to the names of the beers.  A noteworthy rise of around 0.05 points is evident for German and Dutch names. Positive emotional sentiments in names notably boost ratings, particularly for US and Canadian users, impacting taste, aroma, and palate. French and Spanish names also show a significant positive impact from emotional sentiment.
 					<br>
 					<br>
-					text
+					Finally, we develop a recommendation system that provides personalized suggestions incorporating regional and qualitative criteria, which is also capable of performing association recommendation based on style similarity. Descriptive word clouds are also visualized for each beer and style to enhance user experience. 
 					</p>
                 </div>
 			</div>		
