--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                 <div class="blurb" id="blurb3">
                     <h3 class="slide-header">Beer Popularity and Taste Preference</h3>
                     <p>
-                        The beer was clustered based on ABV and several detailed ratings to investigate the similarity
+                        The beers were clustered based on ABV and several detailed ratings to investigate the similarity
                         patterns among different beers.
                     </p>
                 </div>
